--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,9 +12,11 @@ http {
   resolver 127.0.0.11 valid=30s;
 
   upstream etcd_cluster {
-    server etcd-00:2379 resolve;
-    server etcd-01:2379 resolve;
-    server etcd-02:2379 resolve;
+    least_conn;
+
+    server etcd1:2379;
+    server etcd2:2379;
+    server etcd3:2379;
   }
 
   server {
@@ -22,6 +24,7 @@ http {
 
     location / {
       proxy_pass http://etcd_cluster;
+
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
